--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-airbnb": "^6.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-only-warn": "^1.0.3",
     "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
+    "postcss": "^8.4.14",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "tailwindcss": "^3.0.24",
     "typescript": "~4.5.5"
   }
 }
