--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/uniqid": "^5.3.2",
     "@vueuse/core": "^8.6.0",
     "core-js": "^3.8.3",
     "idb": "^7.0.1",
+    "lodash": "^4.17.21",
     "register-service-worker": "^1.7.2",
     "uniqid": "^5.4.0",
     "vue": "^3.2.13",
