Add local script to package.json and update modal component styles

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "local": "npm run serve -- --port 8080"
   },
   "dependencies": {
     "@types/lodash": "^4.14.182",
