--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "local": "npm run serve"
   },
   "dependencies": {
+    "@lottiefiles/vue-lottie-player": "^1.1.0",
     "@types/lodash": "^4.14.182",
     "@types/uniqid": "^5.3.2",
     "@vueuse/core": "^8.6.0",
@@ -18,6 +19,7 @@
     "register-service-worker": "^1.7.2",
     "uniqid": "^5.4.0",
     "vue": "^3.2.13",
+    "vue-lottie-player": "^0.1.9",
     "vue-router": "^4.0.3",
     "vuedraggable": "^4.1.0",
     "vuex": "^4.0.0"
